--- a/DSCI310-notebook.ipynb
+++ b/DSCI310-notebook.ipynb
@@ -17,6 +17,14 @@
    "source": [
     "print(\"What am I doing here\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33164f17-b4e5-4a55-8a25-093e2260a54e",
+   "metadata": {},
+   "source": [
+    "I think that version control is something modern society hasn't learned to value. It is a highly powerful tool which can be of big support to almost every computer user. Version control can make life easy because it allows us to work in different locations with our projects and it's free (at least our version of work). The frustrating part is that it is somehow \"complex\" (using terminal, and accessing programs or interfaces that look \"geeky\") and that it requires a level of knowledge that involves the so feared Terminal."
+   ]
   }
  ],
  "metadata": {
